enable preview added